[package]
name = "pymscada-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] } 
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.2"
rppal = "0.14.1"
rustfft = "6.1"
num-complex = "0.4"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[build]
rustflags = ["-C", "target-cpu=native"]
